feat:api-service中添加gift
